# dorsal-whisper

./: .gitignore  README.md  model_config.toml  pyproject.toml
.github/workflows/: ci.yml
dorsal_whisper/: __init__.py  config.py  model.py
scripts/: check.sh
tests/: test_model.py
tests/assets/: README.md
